--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "source-map-support": "^0.5.21",
     "ts-node": "^10.9.1",
     "tsconfig-paths": "^4.2.0",
-    "typescript": "^5.1.3"
+    "typescript": "^5.1.3",
+    "zod": "^3.22.4"
   }
 }
