--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "@nestjs/platform-express": "^10.0.0",
     "@prisma/client": "^5.11.0",
     "reflect-metadata": "^0.2.0",
-    "rxjs": "^7.8.1"
+    "rxjs": "^7.8.1",
+    "zod": "^3.22.4",
+    "zod-validation-error": "^3.0.3"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
@@ -33,7 +35,6 @@
     "source-map-support": "^0.5.21",
     "ts-node": "^10.9.1",
     "tsconfig-paths": "^4.2.0",
-    "typescript": "^5.1.3",
-    "zod": "^3.22.4"
+    "typescript": "^5.1.3"
   }
 }
