--- a/package.json
+++ b/package.json
@@ -3,16 +3,11 @@
   "version": "0.0.1",
   "description": "Backend infrastructure for the Explore app. Featuring a TypeScript codebase with Nest.js and Prisma.",
   "author": "Murillo Nahás",
-  "private": true,
+  "private": false,
   "license": "UNLICENSED",
   "scripts": {
     "build": "nest build",
-    "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
-    "start": "nest start",
-    "start:dev": "nest start --watch",
-    "start:debug": "nest start --debug --watch",
-    "start:prod": "node dist/main",
-    "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix"
+    "dev": "nest start --watch"
   },
   "dependencies": {
     "@nestjs/common": "^10.0.0",
@@ -30,7 +25,6 @@
     "@nestjs/testing": "^10.0.0",
     "@types/express": "^4.17.17",
     "@types/node": "^20.3.1",
-    "eslint": "^8.42.0",
     "prisma": "^5.11.0",
     "source-map-support": "^0.5.21",
     "ts-node": "^10.9.1",
