--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "@nestjs/passport": "^10.0.3",
     "@nestjs/platform-express": "^10.0.0",
     "@prisma/client": "^5.11.0",
+    "@types/passport-jwt": "^4.0.1",
     "bcryptjs": "^2.4.3",
+    "passport-jwt": "^4.0.1",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
     "zod": "^3.22.4",
